crates/pardosa-schema/tests/compile_fail/evt_003.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
use std::collections::HashSet;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    set: HashSet<u32>,
}
fn main() {}
